8320913: GenShen: Bootstrap 21u backports repo
Reviewed-by: ysr, kdnilsen